<?xml version="1.0" encoding="utf-8"?>
<resources>
    // App Details
    <string name="app_name">WiFi Muscles</string>

    // Navigation
    <string name="nav_signal">Signal</string>
    <string name="nav_details">Details</string>
    <string name="nav_scanner">Scanner</string>
    <string name="nav_options">Options</string>
    <string name="PodPlacer">PodPlacer</string>
    <string name="nav_speed">Speed</string>

    //
    <string name="not_connected">Not Connected</string>
    <string name="empty_dbm">-- dBm</string>

    // Error Messages
    <string name="perm_denied">Permission Denied</string>
    <string name="location_needed">Location permission required for Wi-Fi info</string>

    // Attributes
    <string name="wifi_health_summary">WiFi Health Summary</string>
    <string name="link_speed">Link Speed</string>

    // Google Ads
    <string name="home_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="mbps">-- Mbps</string>
    <string name="frequency">Frequency</string>
    <string name="empty">--</string>
    <string name="stability">Stability</string>
    <string name="score">Score</string>
    <string name="zero">0</string>
    <string name="channel">Channel</string>
    <string name="latency">Latency</string>
    <string name="empty_ms">-- ms</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="share_the_app">Share the App</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="donate_a_coffee">Donate a Coffee</string>
    <string name="support">Support</string>
    <string name="behavior">Behavior</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="appearance">Appearance</string>
    <string name="settings">Settings</string>
    <string name="device_ip">"Device IP: "</string>
    <string name="router_not_connected">Router: Not Connected</string>
    <string name="empty_ip">IP: --</string>
    <string name="empty_mac">MAC: --</string>
    <string name="router_mac">"Router MAC: "</string>
    <string name="todo">TODO</string>
    <string name="router">Router:</string>
    <string name="ip">IP:</string>
    <string name="connected">Connected:</string>
    <string name="ping_ms">Ping: -- ms</string>
    <string name="wi_fi_details">Wi-Fi Details</string>
    <string name="mode">Mode</string>
</resources>